# llm-gateway

./: GEMINI.md  PLAN.md  PROJECT.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: chat.py  models_api.py  routing.py
app/core/: config.py  models.py
app/models/: schemas.py
app/services/llm/: anthropic.py  base.py  openai.py
app/services/routing/: manager.py  strategies.py
tests/: test_chat_routing_integration.py  test_cost_latency_strategy.py  test_latency_strategy.py  test_model_mapping.py  test_models_api.py  test_router_manager.py  test_routing.py  test_schemas_validation.py  test_strategies_api.py
